# job-application-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  jobs.db  main.py  pyproject.toml  seed_data.json
.streamlit/: config.toml
agent/: graph.py  nodes.py  resume_parser.py  state.py
database/: db.py
scraper/: scraper.py
ui/: app.py
